# ndg-fitting

./: .gitignore  .gitmodules  README.md  losses.py  requirements.txt  utils.py
evaluators/: lsh_evaluator.py
ext/mitsuba3/ext/asmjit/: CMakeLists.txt  CxxProject.cmake
ext/mitsuba3/ext/drjit/ext/drjit-core/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/lz4/: README  xxh3.h
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/nanothread/: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/nanothread/ext/cmake-defaults/: CMakeLists.txt  README.md
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/nanothread/include/nanothread/: nanothread.h
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/nanothread/src/: nanothread.cpp  queue.cpp  queue.h
ext/mitsuba3/ext/drjit/ext/drjit-core/ext/nanothread/tests/: CMakeLists.txt  test_01.c  test_02.cpp  test_03.cpp  test_04.cpp
ext/mitsuba3/ext/drjit/ext/drjit-core/include/drjit-core/: array.h  containers.h  jit.h  optix.h  state.h  texture.h  traits.h
ext/mitsuba3/ext/drjit/ext/drjit-core/resources/: common.h  compress.cuh  generate.c  kernels.c  kernels.cu  kernels.dict  kernels.h  kernels_50.ptx  kernels_70.ptx  misc.cuh  mkperm.cuh  perf.cu  reduce.cuh  scan.cuh
ext/mitsuba3/ext/drjit/ext/drjit-core/src/: alloc.h  api.cpp  common.h  cuda_api.cpp  cuda_api.h  cuda_tex.cpp  cuda_tex.h  eval.cpp  eval.h  eval_cuda.cpp  eval_llvm.cpp  hash.h  init.cpp  internal.h  io.cpp  io.h  llvm_api.cpp  llvm_api.h  log.cpp  log.h  loop.cpp  loop.h  malloc.cpp  malloc.h  op.cpp  op.h  optix_api.cpp  optix_api.h  printf.cpp  printf.h  profiler.h  registry.cpp  registry.h  util.cpp  util.h  var.cpp  var.h  vcall.cpp  vcall.h
ext/mitsuba3/ext/drjit/ext/drjit-core/tests/: CMakeLists.txt  basics.cpp  ekloop.h  graphviz.cpp  loop.cpp  mem.cpp  optix_stubs.cpp  optix_stubs.h  reductions.cpp  test.cpp  test.h  traits.h  triangle.cpp  vcall.cpp
ext/mitsuba3/ext/embree/: .gitattributes  .gitignore  CMakeLists.txt
ext/mitsuba3/ext/embree/common/algorithms/: parallel_partition.h
ext/mitsuba3/ext/embree/common/cmake/: appleclang.cmake  clang.cmake  package.cmake
ext/mitsuba3/ext/embree/common/math/: math.h
ext/mitsuba3/ext/embree/kernels/: CMakeLists.txt  export.macosx.map  export.macosx.map.in
ext/mitsuba3/ext/embree/kernels/common/: ray.h
ext/mitsuba3/ext/embree/tutorials/: CMakeLists.txt
ext/mitsuba3/ext/ittnotify/: main.cpp  test_win.bat
ext/mitsuba3/ext/libjpeg/: .gitignore  CMakeLists.txt  jpegdll.def
ext/mitsuba3/ext/libpng/: CMakeLists.txt
ext/mitsuba3/ext/openexr/: .gitignore  CHANGES.md  CMakeLists.txt
ext/mitsuba3/ext/openexr/IlmBase/Half/: half.h
ext/mitsuba3/ext/openexr/IlmBase/config/: CMakeLists.txt
ext/mitsuba3/ext/openexr/OpenEXR/IlmImf/: CMakeLists.txt  ImfAttribute.h  ImfConvert.cpp
ext/mitsuba3/ext/openexr/OpenEXR/exrmultipart/: exrmultipart.cpp
ext/mitsuba3/ext/pugixml/scripts/nuget/: pugixml.nuspec
ext/mitsuba3/ext/pugixml/src/: pugiconfig.hpp
ext/mitsuba3/ext/zlib/: CMakeLists.txt
ext/mitsuba3/include/mitsuba/python/: docstr.h
ext/mitsuba3/include/mitsuba/render/: bsdf.h  emitter.h  integrator.h  interaction.h  scene.h  sensor.h  shape.h  shapegroup.h
ext/mitsuba3/resources/: setpath.bat
ext/mitsuba3/resources/data/: .gitignore  README.md
ext/mitsuba3/resources/data/common/meshes/: teapot.ply
ext/mitsuba3/resources/data/docs/: plot_xml_srgb_spectrum_convertion.ipynb
ext/mitsuba3/resources/data/docs/scenes/: bsdf_blendbsdf.xml  bsdf_bumpmap_with.xml  bsdf_conductor_aluminium.xml  bsdf_conductor_gold.xml  bsdf_dielectric_diamond.xml  bsdf_dielectric_glass.xml  bsdf_diffuse_plain.xml  bsdf_diffuse_textured.xml  bsdf_mask_after.xml  bsdf_mask_before.xml  bsdf_measured_polarized_fakegold.xml  bsdf_measured_polarized_fakegold_stokes.xml  bsdf_measured_polarized_gold.xml  bsdf_measured_polarized_gold_stokes.xml  bsdf_normalmap_with.xml  bsdf_normalmap_without.xml  bsdf_plastic_default.xml  bsdf_plastic_nopreserve.xml  bsdf_plastic_preserve.xml  bsdf_plastic_shiny.xml  bsdf_polarizer_absorbing.xml  bsdf_polarizer_aligned.xml  bsdf_polarizer_middle.xml  bsdf_pplastic.xml  bsdf_pplastic_diffuse.xml  bsdf_pplastic_diffuse_stokes.xml  bsdf_pplastic_specular.xml  bsdf_pplastic_specular_stokes.xml  bsdf_roughconductor_anisotropic_aluminium.xml  bsdf_roughconductor_copper.xml  bsdf_roughconductor_textured_carbon.xml  bsdf_roughdielectric_glass.xml  bsdf_roughdielectric_rough.xml  bsdf_roughdielectric_textured.xml  bsdf_roughplastic_beckmann.xml  bsdf_roughplastic_diffuse.xml  bsdf_roughplastic_ggx.xml  bsdf_roughplastic_nopreserve.xml  bsdf_roughplastic_preserve.xml  bsdf_thindielectric_glass.xml  (+48 more)
ext/mitsuba3/resources/data/scenes/: .gitignore  hello.xml
ext/mitsuba3/resources/data/scenes/cbox/: cbox-rgb.xml  cbox-spectral.xml  cbox.xml
ext/mitsuba3/resources/data/scenes/matpreview/: matpreview.serialized  matpreview.xml
ext/mitsuba3/resources/data/tests/: reference.serialized
ext/mitsuba3/resources/data/tests/bitmap/: README.md  spot_0.exr  spot_1.exr  spot_2.exr  spot_multi.exr  tga_compressed.tga  (+1 more)
ext/mitsuba3/src/bsdfs/: conductor.cpp  dielectric.cpp  diffuse.cpp  plastic.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  twosided.cpp
ext/mitsuba3/src/integrators/: aov.cpp
ext/mitsuba3/src/render/: bsdf.cpp  emitter.cpp  endpoint.cpp  integrator.cpp  scene.cpp  sensor.cpp  shape.cpp  shapegroup.cpp
ext/mitsuba3/src/render/python/: bsdf_v.cpp  emitter_v.cpp  film_v.cpp  integrator_v.cpp  scene_v.cpp  sensor_v.cpp  shape_v.cpp
ext/mitsuba3/src/shapes/: instance.cpp
ext/mitsuba3/src/shapes/tests/: test_instance.py
ext/pytorch_ssim/: __init__.py
generators/: gaussian_generator.py
splatting/: camera.py  data_structures.py  render.py  scene.py  splatting_train.py  splatting_train_preview.py  splatting_utils.py
splatting/dataset_readers/: blender.py  colmap.py
synthetic/: synthetic_preview.py  synthetic_train.py
synthetic/data_generation/: create_dataset.py  variable_renderer.py
(+390 files in other folders)
